# MusicPlayerTauri

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
.tanstack/tmp/: f105035c-bdde7482de2f9eac3f53aff919f3924a
src/: global.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  lib.rs  models.rs
src-tauri/src/commands/: audio.rs  file_scan.rs  online.rs
src/components/: AIChatInput.tsx  BottomNav.tsx  PlayerBar.tsx  SideBar.tsx  TitleBar.tsx
src/routes/: __root.tsx  index.tsx  library.tsx  settings.tsx
src/routes/collections/: index.tsx
src/routes/posts/: index.tsx
src/stores/: usePlayerStore.ts
