[package]
name = "sonic"
version = "0.1.0"
description = "A music player app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-helper = { version = "0.2.1", features = ["tracing"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "android"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
tauri-helper = "0.2.1"
anyhow = "1.0.100"
jwalk = "0.8.1"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
async-openai = "0.32.2"
tauri-plugin-fs = "2"
regex = "1.10"

# sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }

[workspace]
members = ["."]
